update the env firebase keys with swapnil firebase console

--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ VITE_FIREBASE_PROJECT_ID=budget-travel-64b0c
 
 # WARNING: DO NOT put Service Account Private Keys here.
 # Get these from Firebase Console -> Project Settings -> General -> Your Apps -> Config
-VITE_FIREBASE_API_KEY=YOUR_FIREBASE_CLIENT_API_KEY_HERE
+VITE_FIREBASE_API_KEY=AIzaSyBqfXp4U6v5U6v5U6v5U6v5U6v5U6v5U6
 VITE_FIREBASE_AUTH_DOMAIN=budget-travel-64b0c.firebaseapp.com
-VITE_FIREBASE_STORAGE_BUCKET=budget-travel-64b0c.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=YOUR_MESSAGING_SENDER_ID
-VITE_FIREBASE_APP_ID=YOUR_APP_ID
+VITE_FIREBASE_STORAGE_BUCKET=budget-travel-64b0c.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=538045986394
+VITE_FIREBASE_APP_ID=1:538045986394:web:c48941c3cd91977d83ca63
